# pigs

./: .gitignore  CMakeLists.txt  README.md
include/: pigs.h  pigs_init.h
include/core/: Camera.hpp  Clock.hpp  Engine.hpp  Keyboard.hpp  Mouse.hpp  Scene.hpp  Window.hpp
include/core/callbacks/: AppStatus.hpp  CallbackStatics.hpp  SDL_ForwardDeclaration.hpp
include/core/ecs/: ECS.hpp
include/core/ecs/components/: ComponentBank.hpp  ComponentData.hpp  ComponentVector.hpp  ComponentView.hpp
include/core/ecs/ecs-core/: ECSBitmask.hpp  ECSCore.hpp  ECSTypeID.hpp  ecsdef.hpp
include/core/ecs/entities/: Entity.hpp  EntityBuilder.hpp  EntityFilter.hpp  EntityLinker.hpp
include/core/enums/: KeypressEnum.hpp
include/core/errors/: Error.hpp  debug.hpp  pig_err.hpp  pig_log.hpp
include/core/rendering/: Model.hpp  Transform.hpp
include/core/rendering/shaders/: ShaderManager.hpp
include/core/rendering/textures/: Image.hpp  TextureRegister.hpp  texture_loading.hpp
include/imgui-integration/: Imgui_Init.hpp  InfoPanel.hpp
include/toolkit/: RenderingSettings.hpp  apidef.h
include/toolkit/OpenGL/: FrameBuffer.hpp  PVertex.hpp  Texture.hpp  VBuffer.hpp  VBuffer.inl  Vertex.hpp  glShaders.hpp
include/toolkit/container-types/: map_vector.hpp
include/toolkit/errors/: pig_err.hpp  pig_log.hpp
include/toolkit/filesystem/: filesystem.hpp  image.hpp  path.hpp
include/toolkit/types/: dim2.hpp  frect.hpp  fstring.hpp  rect.hpp  stack.hpp  vec.hpp  vec.inl
src/core/: Clock.cpp  Mouse.cpp  Window.cpp
src/core/callbacks/: Callbacks.cpp
src/core/rendering/textures/: TextureRegister.cpp
src/toolkit/OpenGL/: FrameBuffer.cpp  Texture.cpp  glShaders.cpp
src/toolkit/filesystem/: filesystem.cpp  path.cpp
src/toolkit/types/: vec.cpp
